src-tauri/build_error_gafete_3.log
    Checking brisas-app v0.1.0 (C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri)
error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\db\gafete_queries.rs:344:29
    |
344 |             r.fecha_reporte.unwrap_or_default(),
    |                             ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\db\gafete_queries.rs:345:31
    |
345 |             r.nombre_completo.unwrap_or_default(),
    |                               ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `brisas-app` (lib) due to 2 previous errors
